# openfhe-logreg-training-examples

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cheb_analysis.cpp  data_io.cpp  data_io.h  enc_matrix.cpp  enc_matrix.h  lr_nag.cpp  lr_train_funcs.cpp  lr_train_funcs.h  lr_types.h  parameters.h  pt_matrix.cpp  pt_matrix.h  utils.cpp  utils.h
py_scripts/: README.md  parameter_search.ipynb  step_by_step_training_debugger.ipynb
sigmoidApproxResults/: README.md  chebyshev_approx_analysis.ipynb  train_analysis.ipynb
sigmoidApproxResults/raw_data/: nag_119_loss.csv  nag_128_loss.csv  sigmoidResults_16_32.txt  sigmoidResults_16_59.txt  sigmoidResults_64_119.txt  sigmoidResults_64_128.txt  sigmoidResults_64_59.txt
train_data/: 2014_us_infant_mortality_balanced.csv  CMakeLists.txt  X_norm_1024.csv  X_norm_64.csv  X_scaling.csv  reduceDataset.py  y.csv  y_1024.csv  y_37264.csv  y_64.csv
